--- a/pom.xml
+++ b/pom.xml
@@ -1,73 +1,97 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.gx</groupId>
-  <artifactId>qa-graylog-drools</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>kjar</packaging>
+    <groupId>es.javierjeronimo</groupId>
+    <artifactId>graylog-drool-rules</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>kjar</packaging>
 
-  <name>qa-graylog-drools</name>
-  <url>http://drools.org</url>
+    <name>graylog-drool-rules</name>
+    <url>https://github.com/javierjeronimo/graylog-drool-rules</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  	<drools-version>6.2.0.Final</drools-version>
-  	<slf4j-version>1.7.2</slf4j-version>
-  	<junit-version>4.11</junit-version>
-  </properties>
+    <issueManagement>
+        <url>https://github.com/javierjeronimo/graylog-drool-rules/issues</url>
+        <system>GitHub Issues</system>
+    </issueManagement>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.drools</groupId>
-				<artifactId>drools-bom</artifactId>
-				<type>pom</type>
-				<version>${drools-version}</version>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <scm>
+        <url>https://github.com/javierjeronimo/graylog-drool-rules</url>
+        <connection>scm:git:git://github.com/javierjeronimo/graylog-drool-rules.git</connection>
+        <developerConnection>scm:git:git@github.com:javierjeronimo/javierjeronimo/graylog-drool-rules.git</developerConnection>
+    </scm>
 
-	<dependencies>
-		
-		<dependency>
-	      <groupId>org.drools</groupId>
-	      <artifactId>drools-compiler</artifactId>
-	      <scope>test</scope>
-	    </dependency>
+    <developers>
+        <developer>
+            <email>javier@jeronimosuarez.es</email>
+            <name>Javier Jerónimo</name>
+            <url>https://github.com/javierjeronimo</url>
+            <id>javierjeronimo</id>
+        </developer>
+    </developers>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit-version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j-version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <drools-version>6.2.0.Final</drools-version>
+        <slf4j-version>1.7.2</slf4j-version>
+        <junit-version>4.11</junit-version>
+    </properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.kie</groupId>
-				<artifactId>kie-maven-plugin</artifactId>
-				<version>${drools-version}</version>
-				<extensions>true</extensions>
-			</plugin>
-		</plugins>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.drools</groupId>
+                <artifactId>drools-bom</artifactId>
+                <type>pom</type>
+                <version>${drools-version}</version>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	</build>
+    <dependencies>
+        <dependency>
+            <groupId>org.graylog2</groupId>
+            <artifactId>graylog2-plugin</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j-version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.kie</groupId>
+                <artifactId>kie-maven-plugin</artifactId>
+                <version>${drools-version}</version>
+                <extensions>true</extensions>
+            </plugin>
+        </plugins>
+
+    </build>
 </project>
